[package]

name = "nom"
version = "7.0.0"
authors = [ "contact@geoffroycouprie.com" ]
description = "A byte-oriented, zero-copy, parser combinators library"
license = "MIT"
repository = "https://github.com/Geal/nom"
readme = "README.md"
documentation = "https://docs.rs/nom"
keywords = ["parser", "parser-combinators", "parsing", "streaming", "bit"]
categories = ["parsing"]
edition = "2018"
autoexamples = false

include = [
  "CHANGELOG.md",
  "LICENSE",
  "README.md",
  ".gitignore",
  "Cargo.toml",
  "src/*.rs",
  "src/*/*.rs",
  "tests/*.rs",
  "doc/nom_recipes.md",
  "build.rs"
]

[features]
alloc = []
std = ["alloc", "memchr/use_std", "minimal-lexical/std"]
default = ["std"]
docsrs = []

[dependencies.minimal-lexical]
version = "0.2.0"
default-features = false

[dependencies.memchr]
version = "2.0"
default-features = false

[dev-dependencies]
criterion = "0.3"
doc-comment = "0.3"
proptest = "1.0.0"

[target.'cfg(not(all(target_os = "windows", target_env = "msvc")))'.dev-dependencies]
jemallocator = "^0.3"

[build-dependencies]
version_check = "0.9"

[package.metadata.docs.rs]
features = ["alloc", "std", "docsrs"]
all-features = true

[profile.bench]
debug = true
lto = true
codegen-units = 1

[lib]
bench = false

[[test]]
name = "arithmetic"

[[test]]
name = "arithmetic_ast"
required-features = ["alloc"]

[[test]]
name = "blockbuf-arithmetic"

[[test]]
name = "css"

[[test]]
name = "custom_errors"

[[test]]
name = "float"

[[test]]
name = "ini"
required-features = ["alloc"]

[[test]]
name = "ini_str"
required-features = ["alloc"]

[[test]]
name = "issues"
required-features = ["alloc"]

[[test]]
name = "json"

[[test]]
name = "mp4"
required-features = ["alloc"]

[[test]]
name = "multiline"
required-features = ["alloc"]

[[test]]
name = "overflow"

[[test]]
name = "reborrow_fold"

[[test]]
name = "fnmut"
required-features = ["alloc"]

[[bench]]
name = "arithmetic"
path = "benches/arithmetic.rs"
harness = false

[[bench]]
name = "number"
path = "benches/number.rs"
harness = false

[[bench]]
name = "http"
path = "benches/http.rs"
harness = false

[[bench]]
name = "ini"
path = "benches/ini.rs"
harness = false

[[bench]]
name = "ini_str"
path = "benches/ini_str.rs"
harness = false

[[bench]]
name = "json"
path = "benches/json.rs"
harness = false

[[example]]
name = "json"
required-features = ["alloc"]
path = "examples/json.rs"

[[example]]
name = "iterator"

[[example]]
name = "s_expression"
path = "examples/s_expression.rs"
required-features = ["alloc"]

[[example]]
name = "string"
required-features = ["alloc"]
path = "examples/string.rs"

[badges]
travis-ci = { repository = "Geal/nom" }
coveralls = { repository = "Geal/nom", branch = "master", service = "github" }
maintenance = { status = "actively-developed" }
