[package]
name = "benchmarks"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = { workspace = true }
jemallocator = { workspace = true }
nom = { path = "../" }

[lib]
bench = false

[[bench]]
name = "arithmetic"
path = "benches/arithmetic.rs"
harness = false

[[bench]]
name = "number"
path = "benches/number.rs"
harness = false

[[bench]]
name = "http"
path = "benches/http.rs"
harness = false

[[bench]]
name = "http_streaming"
path = "benches/http_streaming.rs"
harness = false


[[bench]]
name = "ini"
path = "benches/ini.rs"
harness = false

[[bench]]
name = "ini_str"
path = "benches/ini_str.rs"
harness = false

[[bench]]
name = "json"
path = "benches/json.rs"
harness = false

[[bench]]
name = "json_streaming"
path = "benches/json_streaming.rs"
harness = false

[dev-dependencies]
codspeed-criterion-compat = { workspace = true }
nom-language = { workspace = true }
