[package]
name = "nom-language"
version = "0.1.0"
authors = ["contact@geoffroycouprie.com"]
description = "Language parsing focused combinators for the nom parser library"
edition = "2021"
license = "MIT"
repository = "https://github.com/rust-bakery/nom"

[dependencies]
nom = { path = "..", version = "8.0.0" }